--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@
 /* General */
 body {
     font-family: 'Comfortaa', cursive;
-    height:3000px;
+    height:5000px;
 }
 
 
@@ -120,12 +120,14 @@ body {
 
 .carousel-inner > .item > img,
 .carousel-inner > .item > a > img {
-    width: 100%;
+    max-width: 100%;
+    max-height: 100%;
     filter: brightness(35%);
 }
 
 .carousel-inner > .item {
     max-height: 600px;
+    overflow: hidden
 }
 
 .carousel-caption {
@@ -193,12 +195,19 @@ body {
     -moz-transition: .7s ease;
     -o-transition: .7s ease;
     transition: .7s ease;
+    
+    
 } 
 
 .features .feat:hover span.glyphicon {
     border: 1px solid #fff;
     color:#65af00;
     background-color: #fff;
+    
+        -webkit-transform: scale(1.1, 1.1) rotate(360deg);
+    -moz-transform: scale(1.1, 1.1) rotate(360deg);
+    -o-transform: scale(1.1, 1.1) rotate(360deg);
+    transform: scale(1.1, 1.1) rotate(360deg);
 }
 
 .features .feat h3 {
@@ -227,7 +236,7 @@ body {
  }
 
 .testimonial .overlay {
-    background-color: rgba(3,3,3,.8);
+    background-color: rgba(3,3,3,.85);
     width: 100%;
     height: 100%;
 }
@@ -245,8 +254,122 @@ body {
 
 .testimonial h4 {
     color: #65af00;
-    padding-bottom: 70px;
+    padding-top: 15px;
+    padding-bottom: 5px;
+}
+
+.testimonial .carousel-indicators {
+    position: relative;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    margin-left: auto;
 }
 
 
+.testimonial .carousel-indicators li {
+    width: 80px;
+    text-indent: 0;
+    height: 80px;
+    border: 0;
+    border-radius: 50%;
+    border: 3px solid #fff;
+    opacity: .4;
+    overflow: hidden;
+    margin: 10px;
+    -webkit-transition: all .6 ease;
+    -moz-transition: all .6 ease;
+    -o-transition: all .6 ease;
+    transition: all .6s ease;
+    
+}
+
+.testimonial .carousel-indicators li.active {
+    border: 3px solid #65af00;
+    opacity: 1;
+    -webkit-transform: scale(1.2, 1.2);
+    -moz-transform: scale(1.2, 1.2) rotate(360deg);
+    -o-transform: scale(1.2, 1.2);
+    transform: scale(1.2, 1.2)
+
+}
+
+.testimonial .carousel-indicators li img {
+    max-width: 100%;
+}
+
 /* End Testimonial */
+
+/* Start Price Plan */
+
+.price_plan {
+    background-color: #f7f7f7;
+} 
+
+.price_plan h1 {
+    margin-top: 40px;
+    margin-bottom: 30px;
+    color: #525252;
+}
+
+.price_plan .price_box {
+    background: #fff;
+    border: 1px solid #d4d2d2;
+    margin-bottom: 30px;
+}
+
+.price_plan .price_box h3 {
+    font-size: 30px
+}
+
+.price_plan .price_box h3.text-success {
+    color: #5cb85c
+}
+
+.price_plan .price_box h3.text-warning {
+    color: #f0ad4e
+}
+
+.price_plan .price_box h3.text-danger {
+    color: #d9534f
+}
+
+.price_plan .price_box p {
+    font-size: 25px;
+    margin-top: 20px;
+    font-weight: 700;
+    color: #535353;
+    width: 70px;
+    height: 70px;
+    background: #e5e5e5;
+    line-height: 70px;
+    border-radius: 50%;
+    -webkit-transition-duration: 0.7s;
+    -moz-transition-duration: 0.7s;
+    -o-transition-duration: 0.7s;
+    transition-duration: 0.7s;
+    border: 2px solid #fff;
+}
+
+.price_plan .price_box:hover p {
+    -webkit-transform: scale(1.1, 1.1) rotate(360deg);
+    -moz-transform: scale(1.1, 1.1) rotate(360deg);
+    -o-transform: scale(1.1, 1.1) rotate(360deg);
+    transform: scale(1.1, 1.1) rotate(360deg);
+    border: 2px solid #c9c9c8;
+}
+
+.price_plan .price_box ul {
+    margin-top: 28px;
+}
+
+.price_plan .price_box li {
+    line-height: 280%;
+    color: #5c5c5c
+}
+
+.price_plan .price_box .btn {
+    margin-bottom: 20px
+}
+
+/* End Price Plan */
