--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@
 
 body {
     font-family: 'Comfortaa', cursive;
-    height: 5000px;
+    height: 9000px;
 }
 
 
@@ -45,6 +45,16 @@ body {
 
 .navbar-toggle {
     margin-top: 18px;
+}
+
+.btn-success {
+    background-color: #65af00;
+    border-color: #4cae4c;
+}
+
+.btn-success:hover {
+    background-color: #549100;
+    border-color: #4cae4c;
 }
 
 
@@ -233,7 +243,7 @@ body {
 }
 
 .testimonial .overlay {
-    background-color: rgba(3, 3, 3, .85);
+    background-color: rgba(3, 3, 3, .75);
     width: 100%;
     height: 100%;
 }
@@ -375,14 +385,14 @@ body {
 /* Start Our Team */
 
 .our_team {
-    background: url("../images/our_team.jpg") no-repeat fixed center;
+    background: url("../images/our_team.jpg") no-repeat fixed center center;
     background-size: cover;
     color: #fff;
     min-height: 600px;
 }
 
 .our_team .team {
-    background-color: rgba(3, 3, 3, .85);
+    background-color: rgba(3, 3, 3, .75);
     min-height: 600px;
 }
 
@@ -395,9 +405,7 @@ body {
     padding-bottom: 30px;
 }
 
-.our_team .team .person img {
-    filter: brightness(.7)
-}
+.our_team .team .person img {}
 
 .our_team .team .person h4 {
     padding-top: 5px;
@@ -449,3 +457,154 @@ body {
 
 
 /* End Subscribtion */
+
+
+/* Start Statstics */
+
+.stats {
+    background: url(../images/stats.jpg) no-repeat center center fixed;
+    min-height: 400px;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+}
+
+.stats .data {
+    background: rgba(3, 3, 3, .75);
+    min-height: 400px;
+    color: #dedede;
+    padding-top: 60px;
+    padding-bottom: 80px;
+}
+
+.stats .data .element {
+    margin-bottom: 30px;
+}
+
+.stats .data .element:hover {
+    color: #fff;
+}
+
+.stats h1 {
+    margin-bottom: 70px;
+    color: #fff;
+}
+
+.stats i {
+    font-size: 90px
+}
+
+.stats p {
+    font-size: 60px;
+    margin-bottom: -5px;
+    font-weight: 700;
+    margin-top: 5px
+}
+
+.stats span {
+    font-size: 18px;
+    letter-spacing: 2px;
+}
+
+
+/* End Statstics */
+
+
+/* Start Skill */
+
+.skill {
+    margin-top: 40px;
+    margin-bottom: 60px
+}
+
+.skill h1 {
+    margin-bottom: 40px;
+}
+
+.skill .progress {
+    height: 42px;
+    margin-top: 22px;
+}
+
+.skill .progress-bar {
+    line-height: 42px;
+    font-size: 15px;
+}
+
+.skill .progress-bar span {
+    display: block;
+    text-align: left;
+    text-indent: 10px;
+}
+
+.skill .about-team h3 {
+    color: #5d5d5d;
+    font-weight: bold
+}
+
+.skill .about-team p {
+    color: #797979
+}
+
+
+/* End Skill */
+
+
+/* Start Contact Us */
+
+.contact-us {
+    background: url(../images/contact-us.jpg) no-repeat center center fixed;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+    min-height: 500px;
+}
+
+.contact-us .data {
+    background: rgba(3, 3, 3, .7);
+    color: #e8e8e8;
+    min-height: 500px;
+    padding-top: 60px;
+    padding-bottom: 80px;
+}
+
+.contact-us .data p {
+    font-size: 16px;
+    letter-spacing: 2px;
+    margin-bottom: 40px
+}
+
+.contact-us textarea.form-control {
+    height: 109px;
+    resize: none
+}
+
+.contact-us input[type="text"],
+.contact-us textarea {
+    background: rgba(82, 78, 78, 0.5);
+    color: #e6e6e6;
+    border: none
+}
+
+/* End Contact Us */
+
+
+/* Start Sponsored */
+
+.sponsor {
+    background: #f7f7f7;
+    padding-top: 20px;
+    padding-bottom: 20px;
+}
+
+.sponsor img {
+    filter: grayscale(1);
+    opacity: .4;
+    padding-top: 20px;
+    padding-bottom: 20px;
+}
+
+
+/* End Sponsored */
