--- a/css/style.css
+++ b/css/style.css
@@ -11,12 +11,12 @@ body {
 /* ----Start NavBar---- */
 
 body {
-    padding-top: 70px;
+    padding-top: 50px;
 }
 
 .navbar {
     border-radius: 0;
-    min-height: 70px;
+    min-height: 50px;
 }
 
 .navbar .support {
@@ -55,6 +55,8 @@ body {
     background-color: #549100;
     border-color: #4cae4c;
 }
+
+
 
 
 /* Brand */
@@ -122,6 +124,19 @@ body {
     padding-left: 30px;
 }
 
+@media (max-width: 768px) {
+    .navbar-brand>img {
+        width: 50px;
+        margin-top: 6px;
+    }
+    .navbar-brand>span {
+        font-size: 18px;
+    }
+    
+    .navbar-toggle {
+        margin-top: 13px;
+    }
+}
 
 /* ----End NavBar---- */
 
