--- a/css/pages.css
+++ b/css/pages.css
@@ -41,10 +41,11 @@ body {
 
 @media (max-width: 768px) {
     .about-ceo .ceo-content {
-        text-align: center
+        text-align: center;
+        padding-bottom: 30px;
     }
     .about-ceo .ceo-img{
-        margin-left:37%
+        margin-left:33%
     }
     .about-ceo .ceo-img img {
         margin-left: auto
@@ -53,3 +54,19 @@ body {
 
 
 /* End Abou Us Page */
+
+
+
+/* Start FQA Page */
+
+.fqa-collapse {
+    margin: 50px 0;
+}
+
+.fqa-collapse .panel-heading i {
+    float: right;
+    color: #6f6f6f
+}
+
+/* End FQA Page */
+
