--- a/css/pages.css
+++ b/css/pages.css
@@ -45,7 +45,7 @@ body {
         padding-bottom: 30px;
     }
     .about-ceo .ceo-img{
-        margin-left:33%
+        margin-left: calc(50% - 100px);
     }
     .about-ceo .ceo-img img {
         margin-left: auto
